force-app/main/default/objects/Call_Report__c/Call_Report__c.object-meta.xml
<CustomObject>
    <label>Visit Plan / Report</label>
    <nameField>
        <displayFormat>Visit-{0000}</displayFormat>
        <label>Visit Report No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Plan / Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>