force-app/main/default/objects/Call_Report__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <formula>IF( NOT( ISBLANK( Actual_Visit_Date__c ) ) ,  1 ,

 IF(NOT( ISBLANK(  Date_of_Visit__c  ) ), 0, NULL) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>