force-app/main/default/objects/Call_Report__c/fields/Actual_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visit_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Visit Date</label>
    <type>Date</type>
</CustomField>