force-app/main/default/objects/Call_Report__c/fields/Address_No__c.field-meta.xml
<CustomField>
    <fullName>Address_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>