force-app/main/default/objects/Call_Report__c/fields/Business_talk_and_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_talk_and_opportunity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business talk and opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>