force-app/main/default/objects/Call_Report__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre boarding</fullName>
            </value>
            <value>
                <fullName>On-boarding</fullName>
            </value>
            <value>
                <fullName>Post-boarding</fullName>
            </value>
            <value>
                <fullName>SE Default</fullName>
            </value>
            <value>
                <fullName>Initiatives</fullName>
            </value>
            <value>
                <fullName>Float Charge</fullName>
            </value>
            <value>
                <fullName>RPD Team Face To Face Visit</fullName>
            </value>
            <value>
                <fullName>RPD Team Telephone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>