force-app/main/default/objects/Call_Report__c/fields/Check_in_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Location__c</fullName>
    <description>Check-in Location</description>
    <label>Check-in Location</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>