force-app/main/default/objects/Call_Report__c/fields/Check_in_Map__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Map__c</fullName>
    <formula>IF( isnull( Check_in_Location__c ),&apos;&apos; ,  IMAGE( MapLink__c , &quot;&quot;, 300,300))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-in Location</label>
    <type>Text</type>
</CustomField>