force-app/main/default/objects/Call_Report__c/fields/Check_Validation__c.field-meta.xml
<CustomField>
    <fullName>Check_Validation__c</fullName>
    <formula>TEXT(today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Validation</label>
    <type>Text</type>
</CustomField>