force-app/main/default/objects/Call_Report__c/fields/Closed_Segment__c.field-meta.xml
<CustomField>
    <fullName>Closed_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>