force-app/main/default/objects/Call_Report__c/fields/Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Complete_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complete Date / Cancel Date</label>
    <type>Date</type>
</CustomField>