force-app/main/default/objects/Call_Report__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>