force-app/main/default/objects/Call_Report__c/fields/Customer_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>notEqual</operation>
            <value>Disqualified Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Plan / Reports</relationshipLabel>
    <relationshipName>Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>