force-app/main/default/objects/Call_Report__c/fields/Customer_needs__c.field-meta.xml
<CustomField>
    <fullName>Customer_needs__c</fullName>
    <label>Customer needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>