force-app/main/default/objects/Call_Report__c/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visit Plan Date</label>
    <type>Date</type>
</CustomField>