force-app/main/default/objects/Call_Report__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>District</label>
    <length>150</length>
    <type>Text</type>
</CustomField>