force-app/main/default/objects/Call_Report__c/fields/Google_API_Error__c.field-meta.xml
<CustomField>
    <fullName>Google_API_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Google API Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>