force-app/main/default/objects/Call_Report__c/fields/Is_Geolocation_Exist__c.field-meta.xml
<CustomField>
    <fullName>Is_Geolocation_Exist__c</fullName>
    <formula>IF( not ISNULL(Check_in_Location__c) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Geolocation Exist</label>
    <type>Checkbox</type>
</CustomField>