force-app/main/default/objects/Call_Report__c/fields/Is_Last_Checkin_Location__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Checkin_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Showing if the location info is updated from Google Map API or not 
This will be trigger from Is Checkin Location Changed workflow</description>
    <label>Is Last Checkin Location</label>
    <type>Checkbox</type>
</CustomField>