force-app/main/default/objects/Call_Report__c/fields/Is_Retry_for_GoogleMap__c.field-meta.xml
<CustomField>
    <fullName>Is_Retry_for_GoogleMap__c</fullName>
    <formula>IF(AND(OR(ISNULL(Retry_Google_Map__c),Retry_Google_Map__c &lt;= 2),Is_Geolocation_Exist__c=True, Is_Last_Checkin_Location__c =False), True, False)</formula>
    <label>Is Retry for GoogleMap</label>
    <type>Checkbox</type>
</CustomField>