force-app/main/default/objects/Call_Report__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Lead.Status</field>
            <operation>equals</operation>
            <value>Open,Passed Prescreening,Contacted</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Visit Plan / Reports</relationshipLabel>
    <relationshipName>Visit_Plan_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>