force-app/main/default/objects/Call_Report__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>This field only use in report (Request from Yanee)</description>
    <formula>Lead__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead ID</label>
    <type>Text</type>
</CustomField>