force-app/main/default/objects/Call_Report__c/fields/Main_purpose__c.field-meta.xml
<CustomField>
    <fullName>Main_purpose__c</fullName>
    <label>Main purpose</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categories__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>First visit</fullName>
            </value>
            <value>
                <fullName>Find Oppty</fullName>
            </value>
            <value>
                <fullName>Product pitching / Present Product</fullName>
            </value>
            <value>
                <fullName>Follow up sales</fullName>
            </value>
            <value>
                <fullName>Submit proposal</fullName>
            </value>
            <value>
                <fullName>Sign Agreement</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>On-boarding new product</fullName>
            </value>
            <value>
                <fullName>Credit review</fullName>
            </value>
            <value>
                <fullName>Service review for credit product (Interview cust need)</fullName>
            </value>
            <value>
                <fullName>Service review for non-credit product (Interview cust need)</fullName>
            </value>
            <value>
                <fullName>Boost u% (Business Volume)</fullName>
            </value>
            <value>
                <fullName>Hand over (New RM)</fullName>
            </value>
            <value>
                <fullName>Debt collection</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Sell product</fullName>
            </value>
            <value>
                <fullName>Doc. Collection</fullName>
            </value>
            <value>
                <fullName>Control quality &amp; Follow up debt</fullName>
            </value>
            <value>
                <fullName>Make relationship</fullName>
            </value>
            <value>
                <fullName>Solve problem</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>BB.</fullName>
            </value>
            <value>
                <fullName>SE.</fullName>
            </value>
            <value>
                <fullName>แนะนำตัว / นัดหมายขอเข้าพบลูกค้า</fullName>
            </value>
            <value>
                <fullName>เข้าพบเพื่อสร้างความสัมพันธ์กับลูกค้า</fullName>
            </value>
            <value>
                <fullName>นำเสนอขายผลิตภัณฑ์และบริการ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>