force-app/main/default/objects/Call_Report__c/fields/Meeting_Place__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Place__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>