force-app/main/default/objects/Call_Report__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <description>SCR0378480 Next Step PD</description>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_purpose__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1 รอการยืนยันจาก RM/CPD/Customers</fullName>
            </value>
            <value>
                <fullName>2 รอผู้มีอำนาจอนุมัติพิจารณา</fullName>
            </value>
            <value>
                <fullName>3 รอกำหนดวันนัดหมายครั้งต่อไป</fullName>
            </value>
            <value>
                <fullName>4 รอสำรวจความต้องการของพนักงาน</fullName>
            </value>
            <value>
                <fullName>5 กำหนดวันทำกิจกรรม/จัดเตรียมกิจกรรม</fullName>
            </value>
            <value>
                <fullName>6 ทำแผนสื่อสารรูปแบบ การทำกิจกรรม</fullName>
            </value>
            <value>
                <fullName>7 ติดตามงานครั้งก่อนที่ได้ดำเนินการไปแล้ว</fullName>
            </value>
            <value>
                <fullName>8 ลูกค้ารอให้แก้ไขปัญหา และติดต่อใหม่อีกครั้ง</fullName>
            </value>
            <value>
                <fullName>9 ลูกค้าสนใจ Referให้หน่วยงานที่เกี่ยวข้อง</fullName>
            </value>
            <value>
                <fullName>10 อื่นๆ ระบุเพิ่มเติม</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>