force-app/main/default/objects/Call_Report__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_purpose__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Win Deal</fullName>
            </value>
            <value>
                <fullName>Lost Deal</fullName>
            </value>
            <value>
                <fullName>Win oppty</fullName>
            </value>
            <value>
                <fullName>Lost oppty</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Need follow up</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>To follow up</fullName>
            </value>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Accept &amp;Sign-off Agreement</fullName>
            </value>
            <value>
                <fullName>Customer Reject</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer Accept &amp; will Sign-off Agreement</fullName>
            </value>
            <value>
                <fullName>Float Charge_Not Receive Registration, Already had/Will sign-off Negative Pledge</fullName>
            </value>
            <value>
                <fullName>Float Charge_Stay with Customer, No Negative Pledge</fullName>
            </value>
            <value>
                <fullName>Float Chrage_Exit this Customer</fullName>
            </value>
            <value>
                <fullName>Cancelled this visit</fullName>
            </value>
            <value>
                <fullName>อยู่ระหว่างดำเนินการ</fullName>
            </value>
            <value>
                <fullName>สำเร็จ</fullName>
            </value>
            <value>
                <fullName>ไม่สำเร็จ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>