force-app/main/default/objects/Call_Report__c/fields/Owner_Segment2__c.field-meta.xml
<CustomField>
    <fullName>Owner_Segment2__c</fullName>
    <description>This field only use in report and dashboard</description>
    <formula>If( ISBLANK( Closed_Segment__c) , TEXT(Owner:User.Segment__c) ,Closed_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Segment</label>
    <type>Text</type>
</CustomField>