force-app/main/default/objects/Call_Report__c/fields/Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Segment__c</fullName>
    <description>Owner&apos;s Segment which is used for reports</description>
    <formula>If( ISBLANK( Closed_Reporting_Segment__c  ) ,Owner:User.Reporting_Segment__c,Closed_Reporting_Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Reporting Segment</label>
    <type>Text</type>
</CustomField>