force-app/main/default/objects/Call_Report__c/fields/Reporting_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Purpose__c</fullName>
    <description>For reporting purpose: to show Category (in case of WBG), or Main Purpose (in case of SE)</description>
    <formula>IF (ISPICKVAL(Categories__c,&quot;SE Default&quot;), TEXT(Main_purpose__c), TEXT(Categories__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purpose</label>
    <type>Text</type>
</CustomField>