force-app/main/default/objects/Call_Report__c/fields/Result_from_GoogleMap__c.field-meta.xml
<CustomField>
    <fullName>Result_from_GoogleMap__c</fullName>
    <formula>IF( Is_Last_Checkin_Location__c == True, &quot;SUCCESS&quot;,  IF( Is_Retry_for_GoogleMap__c == True, &quot;Fail Attempt. Wait for Retry&quot;, &quot;Not Check-in/ Reach Maximum Retry&quot;) )</formula>
    <label>Result from Google Map</label>
    <type>Text</type>
</CustomField>