force-app/main/default/objects/Call_Report__c/fields/Retry_Google_Map__c.field-meta.xml
<CustomField>
    <fullName>Retry_Google_Map__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Google Map</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>