force-app/main/default/objects/Call_Report__c/fields/Road__c.field-meta.xml
<CustomField>
    <fullName>Road__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Soi / Road</label>
    <length>50</length>
    <type>Text</type>
</CustomField>