force-app/main/default/objects/Call_Report__c/fields/Stamp_Lead_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Lead_Customer_Name__c</fullName>
    <description>This field for keep customer or Lead information in Visit Plan Report after delete Customer or Lead.
Update by workflow when create visit plan report</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Stamp Lead/Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>