force-app/main/default/objects/Call_Report__c/fields/Start_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Visit_Time__c</fullName>
    <description>Start Visit Time</description>
    <label>Start Visit Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6:00</fullName>
            </value>
            <value>
                <fullName>6:30</fullName>
            </value>
            <value>
                <fullName>7:00</fullName>
            </value>
            <value>
                <fullName>7:30</fullName>
            </value>
            <value>
                <fullName>8:00</fullName>
            </value>
            <value>
                <fullName>8:30</fullName>
            </value>
            <value>
                <fullName>9:00</fullName>
            </value>
            <value>
                <fullName>9:30</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:30</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>12:30</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>13:30</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>14:30</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>15:30</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>16:30</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>17:30</fullName>
            </value>
            <value>
                <fullName>18:00</fullName>
            </value>
            <value>
                <fullName>18:30</fullName>
            </value>
            <value>
                <fullName>19:00</fullName>
            </value>
            <value>
                <fullName>19:30</fullName>
            </value>
            <value>
                <fullName>20:00</fullName>
            </value>
            <value>
                <fullName>20:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>