force-app/main/default/objects/Call_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Open</fullName>
                <default>true</default>
                <label>1 - Open</label>
            </value>
            <value>
                <fullName>2 - Completed</fullName>
            </value>
            <value>
                <fullName>3 - Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>