force-app/main/default/objects/Call_Report__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <formula>TEXT( Status__c ) &amp; TEXT(Year( Date_of_Visit__c )) &amp; TEXT(Month( Date_of_Visit__c )) &amp; TEXT(Day( Date_of_Visit__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Date</label>
    <type>Text</type>
</CustomField>