force-app/main/default/objects/Call_Report__c/fields/Sub_District__c.field-meta.xml
<CustomField>
    <fullName>Sub_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub District</label>
    <length>150</length>
    <type>Text</type>
</CustomField>