force-app/main/default/objects/Call_Report__c/fields/Sub_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Sub_Purpose__c</fullName>
    <label>Sub Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Main_purpose__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>QRS</fullName>
            </value>
            <value>
                <fullName>EWS</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Executive lunch / dinner</fullName>
            </value>
            <value>
                <fullName>Senior visit</fullName>
            </value>
            <value>
                <fullName>Event by TMB</fullName>
            </value>
            <value>
                <fullName>Event by Customer</fullName>
            </value>
            <value>
                <fullName>EWS Customer</fullName>
            </value>
            <value>
                <fullName>DPD Customer</fullName>
            </value>
            <value>
                <fullName>NPL Customer</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Others (ให้ระบุ)</fullName>
            </value>
            <value>
                <fullName>Cash_X-Sell Payment &amp; CollectionTxn</fullName>
            </value>
            <value>
                <fullName>Cash_One Bank &amp; Chq. Solution</fullName>
            </value>
            <value>
                <fullName>Cash_Acquire New for Domestic txn</fullName>
            </value>
            <value>
                <fullName>Cash_Fleet Card</fullName>
            </value>
            <value>
                <fullName>Cash_Payroll Cash Card</fullName>
            </value>
            <value>
                <fullName>Loan_Working Capital Boost Utz.</fullName>
            </value>
            <value>
                <fullName>Loan_Setup New Limit , 8 Key Industries</fullName>
            </value>
            <value>
                <fullName>CreditFee_LG Campaign , Valued Group</fullName>
            </value>
            <value>
                <fullName>CreditFee_LG Campaign , Welcome Group</fullName>
            </value>
            <value>
                <fullName>CreditFee_SetupNewLTLoan, ProjectFinance</fullName>
            </value>
            <value>
                <fullName>CreditFee_SetupNewLimit, 3FocusIndustry</fullName>
            </value>
            <value>
                <fullName>TF&amp;FX_Increase TF Limit</fullName>
            </value>
            <value>
                <fullName>TF&amp;FX_Realign TOD to TF Limits</fullName>
            </value>
            <value>
                <fullName>TF&amp;FX_OTT Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>