force-app/main/default/objects/Call_Report__c/fields/Target_next_visit_date__c.field-meta.xml
<CustomField>
    <fullName>Target_next_visit_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target next visit date</label>
    <type>Date</type>
</CustomField>