force-app/main/default/objects/Call_Report__c/fields/TMB_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Customer_ID__c</fullName>
    <description>This field use only in report (Request from Yanee)</description>
    <formula>Customer_name__r.TMB_Customer_ID_PE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMB Customer ID</label>
    <type>Text</type>
</CustomField>