force-app/main/default/objects/Call_Report__c/fields/TMB_person__c.field-meta.xml
<CustomField>
    <fullName>TMB_person__c</fullName>
    <label>TMB person</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trade Specialist</fullName>
            </value>
            <value>
                <fullName>Capital Market Specialist</fullName>
            </value>
            <value>
                <fullName>Cash Specialist</fullName>
            </value>
            <value>
                <fullName>Supply Chain Specialist</fullName>
            </value>
            <value>
                <fullName>LSP</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>Team head</fullName>
            </value>
            <value>
                <fullName>Group head</fullName>
            </value>
            <value>
                <fullName>Segment head</fullName>
            </value>
            <value>
                <fullName>Chief</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>