force-app/main/default/objects/Call_Report__c/fields/Week_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Week_of_Visit__c</fullName>
    <formula>&quot;Wk &quot; &amp; TEXT( CEILING((DAY(  Date_of_Visit__c  ) / 7))) &amp; &quot;/&quot; &amp; TEXT(MONTH(  Date_of_Visit__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week of Visit</label>
    <type>Text</type>
</CustomField>